--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="top-bar">Sliding Puzzle</div>
         <div id="big-box">
             <div id="row1" class="row">
                 <div id="cell11" class="tile1" onClick='clickCell(1,1)'></div>
@@ -35,6 +36,8 @@
                 <div id="cell44" class="tile16" onClick='clickCell(4,4);'></div>
          <div>
         </div>
+        <div class="moves">Moves</div>
+        <div ><a class="btn" onclick="shuffle()">New Game</a></div>
         <script src="script.js"></script>
     </body>
 </html>
