--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
                 <div id="cell42" class="tile14" onClick='clickCell(4,2);'></div>
                 <div id="cell43" class="tile15" onClick='clickCell(4,3);'></div>
                 <div id="cell44" class="tile16" onClick='clickCell(4,4);'></div>
-         <div>
+            </div>
         </div>
         <div class="moves">Moves</div>
-        <div ><a class="btn" onclick="shuffle()">New Game</a></div>
+            <div ><a class="btn" onclick="shuffle()">New Game</a></div>
+        
         <script src="script.js"></script>
     </body>
 </html>
