--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             </div>
         </div>
         <div class="moves">Moves</div>
-            <div ><a class="btn" onclick="shuffle()">New Game</a></div>
+        <div class="timer"></div>
+        <div ><a class="btn" onclick="shuffle()">New Game</a></div>
         
         <script src="script.js"></script>
     </body>
