--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="moves">Moves</div>
-        <div class="timer"></div>
+        <div class="timer">Time <br> 0s</div>
         <div ><a class="btn" onclick="shuffle()">New Game</a></div>
         
         <script src="script.js"></script>
