--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <meta name="author" content="Umang Singla">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+
     </head>
     <body>
         <div id="top-bar">Sliding Puzzle</div>
