--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         </div>
         <div class="moves">Moves</div>
         <div class="timer">Time <br> 0s</div>
+        <div class="score">Score <br>0</div>
         <div ><a class="btn" onclick="shuffle()">New Game</a></div>
         
         <script src="script.js"></script>
