background changed on winning

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="moves">Moves</div>
         <div class="timer">Time <br> 0s</div>
         <div class="score">Score <br>0</div>
-        <div ><a class="btn" onclick="shuffle()">New Game</a></div>
+        <div ><a class="btn" onclick="location.reload()">New Game</a></div>
         
         <script src="script.js"></script>
     </body>
