background audio added

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <div class="timer">Time <br> 0s</div>
         <div class="score">Score <br>0</div>
         <div ><a class="btn" onclick="location.reload()">New Game</a></div>
+        <audio src="audio.wav" hidden autoplay controls>
+            <p>If you are reading this, it is because your browser does not support the audio element.</p>
+            </audio>
         
         <script src="script.js"></script>
     </body>
