--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
         <div class="timer">Time <br> 0s</div>
         <div class="score">Score <br>0</div>
         <div ><a class="btn" onclick="location.reload()">New Game</a></div>
+
+        <div class="dev">Developed by Umang Singla</div>
+
+        <div class="rules">
+            <p style="font-size: 200%;">Rules:-</p>
+            <ul>
+                <li>You have to arrange the blocks as shown<br>
+                    <img class="solved-img" src="solved.jpg">
+                </li>
+                <li>Click or swipe to move the block to the black position.</li>
+            </ul>
+        </div>
         
         <script src="script.js"></script>
 
